Regression fix: Home page no longer overflows sideways.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -540,7 +540,7 @@ header.main {
 	height: 400px;
 
 	.bg {
-		width: 90%;
+		width: 50%;
 		height: 85%;
 		position: absolute;
 		left: 50%;
